updated setup files for index.html to place containers to webpage when served

--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  
+  <div id="intro-container">
+    <div class="card w-75 mb-3">
+      <div class="card-body">
+        <h5 class="card-title">Welcome to the Hogwarts Sorting Hat Application</h5>
+        <p class="card-text">Welcome to the Hogwarts Sorting Hat.</p>
+        <a href="#" class="btn btn-primary">Button</a>
+      </div>
+    </div>
+    
+  <div id="form-container"></div>
 
+  <div id="btn-container">
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-warning">Warning</button>
+    <button type="button" class="btn btn-info">Info</button>
+  </div>
   
+  <div id="card-container"></div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
