--- a/index.html
+++ b/index.html
@@ -4,34 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Sorting Hat</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"     crossorigin="anonymous">
   </head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
+
   <div id="intro-container">
-    <div class="card w-75 mb-3">
+    <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Welcome to the Hogwarts Sorting Hat Application</h5>
-        <p class="card-text">Welcome to the Hogwarts Sorting Hat.</p>
-        <a href="#" class="btn btn-primary">Button</a>
+        <h5 class="card-title">Welcome to the Hogwarts Sorting Hat!</h5>
+        <p class="card-text">Sorting Students is what we are known for in this application.</p>
+        
+        <div id="form-container">
+          <div class="mb-3">
+            <label for="formGroupExampleInput" class="form-label">Student Spirit Element:</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+          </div>
+        </div> <!--end form-container-->
+
+        <a href="#" class="btn btn-primary">Click To Sort</a>
       </div>
     </div>
+    </div> <!--end intro-container-->
     
-  <div id="form-container"></div>
-
-  <div id="btn-container">
-    <button type="button" class="btn btn-secondary">Secondary</button>
-    <button type="button" class="btn btn-success">Success</button>
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-warning">Warning</button>
-    <button type="button" class="btn btn-info">Info</button>
-  </div>
   
+
+
+  <div id="student-houses">STUDENT HOUSES</div>
+    <div id="btn-container">
+      <button type="button" class="btn btn-secondary">All Houses</button>
+      <button type="button" class="btn btn-success">Hufflepuff</button>
+      <button type="button" class="btn btn-danger">Gryffindor</button>
+      <button type="button" class="btn btn-warning">Ravenclaw</button>
+      <button type="button" class="btn btn-info">Slytherin</button>
+    </div><!--end student-houses-->
+  
+
   <div id="card-container"></div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
