added cards on DOM function to render cards to DOM, also added HTML section for expelled students

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
         
         <div id="form-container">
           <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label">Student Spirit Element:</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+             <a href="#" class="btn btn-primary">Click To Sort</a>
           </div>
-        </div> <!--end form-container-->
-
-        <a href="#" class="btn btn-primary">Click To Sort</a>
-      </div>
-    </div>
-    </div> <!--end intro-container-->
+        </div><!--end form-container-->
+      </div><!--end card-body -->
+    </div> <!--end card -->
+  </div> <!--end intro-container-->
     
   
 
@@ -41,7 +39,9 @@
     </div><!--end student-houses-->
   
 
-  <div id="card-container"></div>
+  <div id="card-container"></div><!--end card-container div -->
+
+  <div id="expelled-container"></div><!-- end expelled-container div -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
