added expelled student cards to DOM. Styled sorting form on main.css file. Modified student card stylng on main.css file

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Welcome to the Hogwarts Sorting Hat!</h5>
-        <p class="card-text">Sorting Students is what we are known for in this application.</p>
+        
+        <p class="card-text">Sort students by spirit element (Fire, Earth, Air, or Water)</p>
         
         <div id="form-container">
           <div class="mb-3">
-             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Input element to sort">
              <a href="#" class="btn btn-primary">Click To Sort</a>
           </div>
         </div><!--end form-container-->
