placed add student form on DOM via JavaScript

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="mb-3">
              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Input element to sort">
              <a href="#" class="btn btn-primary">Click To Sort</a>
-             <a href="#" class="btn btn-success">Add Student</a>
+             <a href="#" class="btn btn-success add-student-btn">Add Student</a>
           </div>
         </div><!--end sort-container-->
       </div><!--end card-body -->
@@ -41,24 +41,7 @@
   
 
   <form action="" id="student-form">
-    <div class="input-group mb-3">
-      <span class="input-group-text">FirstName:</span>
-      <input type="text" id="firstName" class="form-control" placeholder="" aria-label="FirstName" aria-describedby="basic-addon2">
-    </div>
-
-    <div class="input-group mb-3">
-      <span class="input-group-text">LastName::</span>
-      <input type="text"  id="lastName" class="form-control" placeholder="" aria-label="LastName" aria-describedby="basic-addon2">
-    </div>
-
-   <!-- <div class="input-group mb-3">
-      <span class="input-group-text">Element:</span>
-      <input type="text"  id="element" class="form-control" placeholder=" Assigned element ( Fire , Earth, Air, or Water)" aria-label="element" aria-describedby="basic-addon2">
-    </div> -->
-
-    <div class="submit-btn">
-      <button type="submit" id="submitStudent" class="btn btn-primary btn-lg">Submit</button>
-    </div>
+   
   </form><!-- end ID student-form -->
 
 
