--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
   <div id="student-houses">STUDENT HOUSES</div>
     <div id="btn-container">
-      <button type="button" class="btn btn-secondary">All Houses</button>
-      <button type="button" class="btn btn-success">Hufflepuff</button>
-      <button type="button" class="btn btn-danger">Gryffindor</button>
-      <button type="button" class="btn btn-warning">Ravenclaw</button>
-      <button type="button" class="btn btn-info">Slytherin</button>
+      <button type="button" class="btn btn-secondary all-houses">All Houses</button>
+      <button type="button" class="btn btn-success hufflepuff">Hufflepuff</button>
+      <button type="button" class="btn btn-danger gryffindor">Gryffindor</button>
+      <button type="button" class="btn btn-warning ravenclaw">Ravenclaw</button>
+      <button type="button" class="btn btn-info slytherin">Slytherin</button>
     </div><!--end student-houses-->
   
 
@@ -44,15 +44,11 @@
    
   </form><!-- end ID student-form -->
 
-
-
-
-    
-
+<div id="card-wrapper">
   <div id="card-container"></div><!--end card-container div -->
 
   <div id="expelled-container"></div><!-- end expelled-container div -->
-
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script type="module" src="scripts/main.js"></script>
