--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
              <a href="#" class="btn btn-primary sortStudent-btn">Click To Sort</a>
              <a href="#" class="btn btn-success add-student-btn">Add Student</a>
           </div>
+          <div id="sorting-form-input"></div>
         </div><!--end sort-container-->
       </div><!--end card-body -->
     </div> <!--end card -->
@@ -45,7 +46,7 @@
 
 <div id="card-wrapper">
   <div id="card-container"></div><!--end card-container div -->
-
+  <div id="voldemort-army"> VOLDEMORT'S ARMY:</div>
   <div id="expelled-container"></div><!-- end expelled-container div -->
 </div>
 
