updated sortElement click event to get sorted data on the DOM

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div id="sort-container">
           <div class="mb-3">
             <form action="" id="sorting-form"></form>
-             <a href="#" class="btn btn-primary sortStudent-btn">Click To Sort</a>
+             <a href="#" class="btn btn-primary sortStudent-btn">Click To Enter Sort</a>
+             <a href="#" class="btn btn-primary" id="sortStudentInput-btn">Sort</a>
              <a href="#" class="btn btn-success add-student-btn">Add Student</a>
           </div>
           <div id="sorting-form-input"></div>
@@ -41,8 +42,10 @@
     </div><!--end student-houses-->
   
 
-  <form action="" id="student-form">
-  </form><!-- end ID student-form -->
+  <form action="" id="student-form"></form><!-- end ID student-form -->
+
+
+<div id="sorted-wrapper"></div><!--end sorted-wrapper-->
 
 <div id="card-wrapper">
   <div id="card-container"></div><!--end card-container div -->
