fixed sorting function on main.js and removed additional code blocks that were not being used

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <div id="sort-container">
           <div class="mb-3">
             <form action="" id="sorting-form"></form>
-             <a href="#" class="btn btn-primary sortStudent-btn">Click To Enter Sort</a>
-             <a href="#" class="btn btn-primary" id="sortStudentInput-btn">Sort</a>
-             <a href="#" class="btn btn-success add-student-btn">Add Student</a>
+              <a href="#" class="btn btn-success add-student-btn">Sort</a>
           </div>
           <div id="sorting-form-input"></div>
         </div><!--end sort-container-->
